--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
   <title>Nanotech</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
 </head>
 
 <body>
